--- a/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
+++ b/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>**Tugas Latihan Algoritma dan Pseudocode**</center>\n",
+    "\n",
+    "\n",
     "Nama: Muhammad Ellbendl Satria\n",
     "\n",
     "NIM: 2023071004\n",
@@ -208,7 +211,7 @@
     "    return luas\n",
     "\n",
     "hasil = luas_segitiga(25,30)\n",
-    "print(hasil)"
+    "print(hasil)\n"
    ]
   },
   {
