Update Latihan Algoritma dan Pseudocode.ipynb

--- a/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
+++ b/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "NIM: 2023071004\n",
     "\n",
-    "Kelas: Data Analisis dan Algoritma (INF-A)\n",
+    "Kelas: Desain dan Analisis Algoritma (INF-A)\n",
     "\n",
     "# 1. Cari nilai KPK dari 3 dan 4\n",
     "\n",
