--- a/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
+++ b/Pertemuan 1/Latihan Algoritma dan Pseudocode.ipynb
@@ -124,15 +124,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pisang\n",
-      "manggis\n"
+      "piring1: pisang\n",
+      "piring2: manggis\n"
      ]
     }
    ],
@@ -148,8 +148,8 @@
     "    return piring1, piring2\n",
     "\n",
     "piring1, piring2 = menukar_piring(piring1, piring2)\n",
-    "print(piring1)\n",
-    "print(piring2)"
+    "print(f\"piring1: {piring1}\")\n",
+    "print(f\"piring2: {piring2}\")"
    ]
   },
   {
