--- a/Pertemuan 2/Muhammad-Ellbendl-Satria_Pertemuan2.ipynb
+++ b/Pertemuan 2/Muhammad-Ellbendl-Satria_Pertemuan2.ipynb
@@ -3,7 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
+   "source": [" # <center>**Tugas Latihan Pertemuan 2**</center>\n",
+    "\n",
+    "\n",
+    "Nama: Muhammad Ellbendl Satria\n",
+    "\n",
+    "NIM: 2023071004\n",
+    "\n",
+    "Kelas: Desain dan Analisis Algoritma (INF-A)\n",
+    "\n",:
     "# Latihan 1"
    ]
   },
