--- a/Pertemuan 2/Muhammad-Ellbendl-Satria_Pertemuan2.ipynb
+++ b/Pertemuan 2/Muhammad-Ellbendl-Satria_Pertemuan2.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# <center>**Tugas Latihan Pertemuan 2**</center>\n",
+    "\n",
+    "\n",
+    "Nama: Muhammad Ellbendl Satria\n",
+    "\n",
+    "NIM: 2023071004\n",
+    "\n",
+    "Kelas: Desain dan Analisis Algoritma (INF-A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Latihan 1"
    ]
   },
